# Real-Time-Voice-Rag-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample_docs/: architecture.md  latency_playbook.md  protocols.md  providers.md
data/sample_docs/uploads/: test_page.html
docs/: ARCHITECTURE.md  LATENCY_PLAYBOOK.md
scripts/: quality_gate.py  run_voice_live.sh
src/voice_rag_agent/: __init__.py  api.py  benchmark.py  cli.py  config.py  evals.py  events.py  metrics.py  observability.py  profiling.py  trace_export.py
src/voice_rag_agent/integrations/: __init__.py  livekit_worker.py  llama_index_adapter.py
src/voice_rag_agent/llm/: __init__.py  base.py  factory.py  ollama.py  openai_responses.py
src/voice_rag_agent/protocols/: __init__.py  a2a.py  mcp_server.py
src/voice_rag_agent/rag/: __init__.py  documents.py  engine.py  index_store.py  prompts.py  retriever.py
src/voice_rag_agent/voice/: __init__.py  asr.py  audio_sink.py  pipeline.py  tts.py  vad.py
tests/: test_api.py  test_benchmark.py  test_cli.py  test_documents.py  test_engine.py  test_evals.py  test_profiling.py  test_retriever.py  test_trace_export.py  test_voice_pipeline.py
tests/fixtures/: benchmark_queries.json  eval_cases.json
